--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   <body>
     <nav class="global-container header">
-      <a class="current">Home</a>
+      <a class="current" href="#">Home</a>
+      <a class="" href="./projects.html">Projects</a>
     </nav>
     <main class="global-container" id="content">
       <div id="landing">
