fixed url mapping

--- a/pong/index.html
+++ b/pong/index.html
@@ -12,12 +12,14 @@
 
 <body>
   <nav class="global-container header">
-    <a class="current" href="/">Home</a>
-    <a class="" href="/projects.html">Projects</a>
+    <a class="" href="../">Home</a>
+    <a class="" href="../projects.html">Projects</a>
   </nav>
 
+  <main>
 
-  <canvas id="scene" width="1000" height="600"></canvas>
+    <canvas id="scene" width="1000" height="600"></canvas>
+  </main>
 
   <script src="pong.js"></script>
 </body>
