--- a/projects.html
+++ b/projects.html
@@ -19,13 +19,13 @@
 
   <body>
     <nav class="global-container header">
-      <a class="" href="/">Home</a>
+      <a class="" href="./">Home</a>
       <a class="current" href="#">Projects</a>
     </nav>
     <main class="global-container" id="content">
      <div class="project-wrapper">
         <h2><a href="./pong">Pong game</a></h2>
-        <img src="/pong_preview.png" />
+        <img src="./pong_preview.png" />
      </div>
     </main>
 
