finished first revision of current lesson

--- a/code-start/index.html
+++ b/code-start/index.html
@@ -9,9 +9,11 @@
   </head>
 
   <body>
+    <!-- Website navigation bar -->
     <nav class="global-container header">
       <a class="current">Home</a>
     </nav>
+    
     <main class="global-container" id="content">
       <div id="landing">
         <div>
