--- a/code-end/index.html
+++ b/code-end/index.html
@@ -9,9 +9,12 @@
   </head>
 
   <body>
+    <!-- Website navigation bar -->
     <nav class="global-container header">
       <a class="current">Home</a>
+      <a class="" href="./projects.html" >Project</a>
     </nav>
+
     <main class="global-container" id="content">
       <div id="landing">
         <div>
