finished lesson 3 of

--- a/code-end/projects.html
+++ b/code-end/projects.html
@@ -8,10 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="global-container header">
-        <a class="current" href="./index.html">Home</a>
-        <a class="">Project</a>
-    </nav>
+    <body>
+        <nav class="global-container header">
+            <a class="current" href="./index.html">Home</a>
+            <a class="">Project</a>
+        </nav>
+        <main class="global-container" >
+            <h1>The following is a showcase of my projects</h1>
     
+            <h2>Really cool scratch game</h2>
+            
+            <img src="./preview-of-my-first-project.png" />
+        </main> <!-- New piece of code-->
+    </body>
 </body>
 </html>
